<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/quizappbackground"
    android:gravity="center"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Quiz App"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:gravity="center"
            android:textColor="@color/welcome"
            android:textSize="35sp"
            android:textStyle="bold"
            />
            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entername"
                android:gravity="center"
                android:textColor="@color/enteryourname"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:contentDescription="@string/enter_your_name"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/text_entered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/la_game_khelne_vay_nam_hal"
                    android:inputType="textCapWords"
                    android:textColor="#889696"
                    android:textColorHint="#889696"
                    tools:ignore="ContentDescription" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/buttonstart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/basic"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>